--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "moment": "^2.27.0",
     "request": "^2.88.0",
     "telegraf": "^3.32.0"
   }
